[package]
name = "vrs"
description = "Verifiable Reed-Solomon Encoding (VRS) implementations."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
ark-bn254 = "^0.4.0"
ark-crypto-primitives = { version = "^0.4.0", features = ["merkle_tree"] }
ark-ec = "^0.4.2"
ark-ff = "^0.4.2"
ark-poly = "^0.4.2"
ark-serialize = "^0.4.2"
ark-std = "^0.4.0"
derivative = { version = "2", features = ["use_core"] }
itertools = "0.13.0"
jf-pcs = { git = "https://github.com/EspressoSystems/jellyfish", version = "0.1.0", default-features = false, features = ["test-srs"] }
nimue = { version = "=0.1.1", features = ["ark"] }
p3-maybe-rayon = "0.2"
thiserror = "2"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["parallel"]
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel", "jf-pcs/parallel", "p3-maybe-rayon/parallel", "ark-crypto-primitives/parallel"]
print-trace = ["ark-std/print-trace"]

[[bench]]
name = "multi_evals"
harness = false

[[bench]]
name = "bkzg"
harness = false

[[bench]]
name = "fft_rev"
harness = false
