[package]
name = "vrs"
description = "Verifiable Reed-Solomon Encoding (VRS) implementations."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
ark-bn254 = "^0.5"
ark-crypto-primitives = { version = "^0.5", features = ["merkle_tree"] }
ark-ec = "^0.5"
ark-ff = "^0.5"
ark-poly = "^0.5"
ark-serialize = "^0.5"
ark-std = "^0.5"
derivative = { version = "2", features = ["use_core"] }
itertools = "0.13.0"
jf-pcs = { git = "https://github.com/EspressoSystems/jellyfish", branch = "pcs-ark-0.5", default-features = false, features = ["test-srs"] }
nimue = { git = "https://github.com/arkworks-rs/nimue", rev = "857289be31eef04ae2ca8bf5346396a2d4f83620", features = ["ark"] }
nimue-pow = { git = "https://github.com/arkworks-rs/nimue", rev = "857289be31eef04ae2ca8bf5346396a2d4f83620", features = ["parallel"] }
p3-maybe-rayon = "0.2"
thiserror = "2"
rand_chacha = "0.3.1"
prettytable-rs = "^0.10"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["parallel"]
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel", "jf-pcs/parallel", "p3-maybe-rayon/parallel"]
print-trace = ["ark-std/print-trace"]
print-conda = []
print-frida = []

[[bench]]
name = "multi_evals"
harness = false

[[bench]]
name = "bkzg"
harness = false

[[bench]]
name = "fft_rev"
harness = false
